# xdamageviz

./: .gitignore  CMakeLists.txt  README.md
include/: box_renderer.h  debug.h  options.h  x11_util.h
src/: box_renderer.c  main.c  options.c  x11_util.c
